# wbfig

./: README.MD  setup.cfg
src/wbfig/: __init__.py  __main__.py  input.py  western.py
