[metadata]
name = wbfig
version = 0.1.0
author = Jason Yang
author_email = jy31415@mit.edu
description = make western blot figures
long_description = file: README.md
long_description_content_type = text/markdown
# url = https://github.com/pypa/sampleproject
# project_urls =
#     Bug Tracker = https://github.com/pypa/sampleproject/issues
# classifiers =
#     Programming Language :: Python :: 3
#     License :: OSI Approved :: MIT License
#     Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    numpy>=1.17
    PyX>=0.15
    matplotlib>=3
    Pillow>=8
    PyYAML>=5

[options.packages.find]
where = src